--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>telegram-ping-handler</groupId>
     <artifactId>telegram-ping-core</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -17,7 +18,7 @@
         <mysql-connector-java.version>8.0.12</mysql-connector-java.version>
 
         <!--JUnit-->
-        <junit.version>5.4.0</junit.version>
+        <junit.version>4.11</junit.version>
 
         <!-- SLF4J -->
         <slf4j.version>1.7.25</slf4j.version>
@@ -31,7 +32,21 @@
         <!-- Mockito -->
         <mockito.version>2.21.0</mockito.version>
 
+        <!--Lombok-->
         <lombok.version>1.18.6</lombok.version>
+
+        <!--Spring-->
+        <spring-framework.version>4.1.5.RELEASE</spring-framework.version>
+
+        <!--Jackson-->
+        <jackson.version>2.5.3</jackson.version>
+        <jackson-asl.version>1.9.13</jackson-asl.version>
+
+        <!--Servlet-->
+        <servlet-api.version>3.1.0</servlet-api.version>
+
+        <!--Harmcrest-->
+        <harmcrest.version>1.3</harmcrest.version>
 
     </properties>
 
@@ -67,10 +82,16 @@
 
         <!--Test-->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>hamcrest-core</artifactId>
+                    <groupId>org.hamcrest</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -86,6 +107,21 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring-framework.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${harmcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <!--Lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -94,8 +130,69 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--Spring-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring-framework.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring-framework.version}</version>
+        </dependency>
+
+        <!--Servlet api-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet-api.version}</version>
+        </dependency>
+
+        <!--Jackson-->
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>${jackson-asl.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>${jackson-asl.version}</version>
+        </dependency>
     </dependencies>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.4</version>
+                    <configuration>
+                        <warSourceDirectory>src/main/webapp</warSourceDirectory>
+                        <warName>telegram-ping-core</warName>
+                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
 
+        <finalName>telegram-ping-core</finalName>
+    </build>
 </project>
