--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,9 @@
         <!--Harmcrest-->
         <harmcrest.version>1.3</harmcrest.version>
 
+        <!--Json Path assert-->
+        <json-path-assert.version>0.8.1</json-path-assert.version>
+
     </properties>
 
     <dependencies>
@@ -119,6 +122,13 @@
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>${harmcrest.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path-assert</artifactId>
+            <version>${json-path-assert.version}</version>
             <scope>test</scope>
         </dependency>
 
