--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,11 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <!--Mysql-connector-->
-        <mysql-connector-java.version>8.0.12</mysql-connector-java.version>
+        <!--Postgres-connector-->
+        <postgres-connector-java.version>9.1-901-1.jdbc4</postgres-connector-java.version>
+
+        <!--Apache CP-->
+        <apache-connection-pool.version>1.4</apache-connection-pool.version>
 
         <!--JUnit-->
         <junit.version>4.11</junit.version>
@@ -51,17 +54,25 @@
         <!--Json Path assert-->
         <json-path-assert.version>0.8.1</json-path-assert.version>
 
+        <!--Hibernate-->
+        <hibernate.version>5.4.1.Final</hibernate.version>
+
     </properties>
 
     <dependencies>
 
 
 
-        <!--Mysql-->
+        <!--DB-->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql-connector-java.version}</version>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgres-connector-java.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>${apache-connection-pool.version}</version>
         </dependency>
 
         <!--Logging-->
@@ -153,6 +164,12 @@
             <version>${spring-framework.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring-framework.version}</version>
+        </dependency>
+
         <!--Servlet api-->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -185,6 +202,21 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>${jackson-asl.version}</version>
         </dependency>
+
+
+        <!--Hibernate-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+            <version>3.4.0.GA</version>
+        </dependency>
+
     </dependencies>
 
 </project>
