--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,8 @@
         <!--Hibernate-->
         <hibernate.version>4.3.10.Final</hibernate.version>
 
+        <!--HSQLDB-->
+        <hsqldb.version>2.3.2</hsqldb.version>
     </properties>
 
     <dependencies>
@@ -216,6 +218,13 @@
             <version>${hibernate.version}</version>
         </dependency>
 
+        <!--HSQLDB for test-->
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
